19990527-00:14 Les Griffith
    * moved gtos2.c gtwin.c gtdos.c gtxxx.c to source\rtl\gt
      at Matthew Hamilton suggestion

19990526-22:53 Les Griffith
    * added Bil Simser's gtapi.h to include
      and the c files to source\rtl
    * added to doc Bil's documentation re gtapi

19990526-20:45 EST David G. Holm <dholm@jsd-llc.com>
  * ChangeLog
    - Removed excess whitespace from previous ChangeLog entry
  * makefile.b31
    - Added some missing source files
  * include/set.h
    - Added hb_set_althan and hb_set_printhan
  * source/rtl/console.c
    - Added OUTERR(), DEVPOS(), DEVOUT(), and EJECT()
    - Note: DEVPOS() and DEVOUT() have limited console support, due to the
      lack of a working GT API.
  * source/rtl/files.c
    - Added missing #if ! defined( __WATCOMC__ ) && ! defined( __BORLANDC__ )
      around first use of S_IWUSR (copied from existing #if from second use).
  * source/rtl/set.c
    - Added file open/close support to HB_SET_ALTFILE and HB_SET_PRINTFILE
  + tests/working/output.prg
    - New module to test DEVPOS() and DEVOUT()

19990527-00:40 Ryszard Glab <rglab@imid.med.pl>
    * the support for following keywords are now 100% compatible with Clipper
      EXTERNAL, FIELD, FOR, FUNCTION
  
19990526-13:30 EST David G. Holm <dholm@jsd-llc.com>
  * source/rtl/dates.c
    - Added hb_dow and HARBOUR DOW() supplied by Jose Lalin <dezac@corevia.com>
  + tests/working/dates3.prg
    - New file to test DOW() supplied by Jose Lalin <dezac@corevia.com>

19990526-17:25 Eddie Runia
  * tests/working/strip.prg
    delete broken one and moved working one in

19990526-16:10 Eddie Runia
  * source/rtl/files.c
    Pass reference error removed.
  * source/rtl/extend.c
    par* commands now work correctly with reference variables.

19990525-23:25 Les Griffith
  * source/rtl/files.c
    added logic to readstr for lasterror

19990525-22:45 CET Eddie Runia
  * tests/working/spawn2.prg; tests/working/runner.c