@@ -1,7 +1,7 @@
 # makefile for Borland C/C++ 32 bits
 
 .path.asm = source\compiler
-.path.c   = source\compiler;source\vm;source\rtl;source\tools
+.path.c   = source\compiler;source\vm;source\rtl;source\tools;source\rtl\gt
 .path.h   = include
 .path.l   = source\compiler
 .path.y   = source\compiler
@@ -14,7 +14,7 @@ PROJECT: harbour.exe harbour.lib libs\b32\terminal.lib libs\win32\terminal.lib
 
 harbour.lib : arrays.obj asort.obj classes.obj codebloc.obj dates.obj datesx.obj \
               debug.obj dynsym.obj environ.obj error.obj \
-              errorapi.obj errorsys.obj extend.obj files.obj gtapi.obj \
+              errorapi.obj errorsys.obj extend.obj files.obj gtdos.obj \
               initsymb.obj itemapi.obj \
               math.obj mathx.obj objfunc.obj set.obj symbols.obj strings.obj \
               stringp.obj \
@@ -46,7 +46,7 @@ errorapi.obj : errorapi.c extend.h types.h
 errorsys.obj : errorsys.c extend.h types.h
 extend.obj   : extend.c   extend.h types.h
 files.obj    : extend.c   extend.h types.h
-gtapi.obj    : extend.c   extend.h types.h
+gtdos.obj    : extend.c   extend.h types.h
 initsymb.obj : initsymb.c extend.h types.h
 itemapi.obj  : itemapi.c  extend.h types.h
 math.obj     : math.c     extend.h types.h
